# serde-nibs

./: Cargo.toml  LICENSE  README.md
examples/: enum.rs  object-property.rs
src/: main.rs
