[workspace]
resolver = "3"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[package]
name = "serde-nibs"
version = "0.1.0"
edition = "2024"

[[example]]
name = "object-property"
src = "examples/object-property.rs"